<resources>
    <string name="app_name">AplikasiGithub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="location">Location</string>
    <string name="name">Nama</string>
    <string name="company">Company</string>
    <string name="username">Username</string>
    <string name="exit">Exit</string>
    <string name="setting">Setting</string>
    <string name="tabLayout">Tab Layout</string>
    <string name="favorite">Favorite</string>
    <string name="thema">DarkMode</string>
    <string name="search">find your account here</string>
    <string name="appGithub">AppGithub</string>
    <string name="favoiteuser">Favorite</string>
    <string name="detailuser">DetailUser</string>
</resources>