<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_favorites"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rounded_bg"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    android:paddingBottom="10dp"
    android:paddingRight="12dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageUser"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:paddingTop="20dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="0.16000003"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/idfavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        card_view:layout_constraintBottom_toTopOf="@+id/iduserfavorite"
        card_view:layout_constraintEnd_toStartOf="@+id/idfollowersfavorite"
        card_view:layout_constraintHorizontal_bias="0.362"
        card_view:layout_constraintStart_toEndOf="@+id/imageUser"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/iduserfavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/white"
        card_view:layout_constraintEnd_toEndOf="@+id/idfavorite"
        card_view:layout_constraintStart_toStartOf="@+id/idfavorite"
        tools:layout_editor_absoluteY="50dp" />

    <TextView
        android:id="@+id/idlocation"
        android:layout_width="66dp"
        android:layout_height="24dp"
        android:text="@string/location"
        android:textColor="@color/white"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.994"
        card_view:layout_constraintStart_toEndOf="@+id/idfavoritecompany"
        card_view:layout_constraintTop_toBottomOf="@+id/idlovefavorite"
        card_view:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/idfavoritecompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:textColor="@color/white"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="@+id/iduserfavorite"
        card_view:layout_constraintStart_toStartOf="@+id/iduserfavorite"
        card_view:layout_constraintTop_toBottomOf="@+id/iduserfavorite" />

    <ImageView
        android:id="@+id/idlovefavorite"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/favorite"
        android:src="@drawable/love"
        android:tag="Not Saved"
        tools:layout_editor_absoluteX="365dp"
        tools:layout_editor_absoluteY="13dp" />

    <TextView
        android:id="@+id/idfollowersfavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:text="@string/followers"
        android:textColor="@color/white"
        card_view:layout_constraintBottom_toTopOf="@+id/idfollowingfavorite"
        card_view:layout_constraintEnd_toStartOf="@+id/idlovefavorite"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="0.704" />

    <TextView
        android:id="@+id/idfollowingfavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/following"
        android:textColor="@color/white"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="@+id/idfollowersfavorite"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="@+id/idfollowersfavorite" />
</androidx.constraintlayout.widget.ConstraintLayout>